--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>Calculateur Course</h2>
     <label
       >Temps (hh:mm:ss) :
-      <input type="text" id="run_time" placeholder="00:00:00" /></label
+      <input type="time" id="run_time" placeholder="00:00:00" /></label
     ><br />
     <label
       >Distance (km) :
@@ -46,7 +46,7 @@
       <h2>Calculateur Natation</h2>
       <label
         >Temps (hh:mm:ss) :
-        <input type="text" id="swim_time" placeholder="00:00:00" /></label
+        <input type="time" id="swim_time" placeholder="00:00:00" /></label
       ><br />
       <label
         >Distance (m) :
